Sun Dec  7 20:36:49 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16.h:
	* tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16_Factory.h:
	* orbsvcs/orbsvcs/Naming/Naming_Utils.cpp:

	  Fixed fuzz errors.

Sun Dec  7 18:44:01 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Request_Context_Repository.cpp:
	* orbsvcs/orbsvcs/FtRtEvent/EventChannel/Set_Update_Interceptor.cpp:

	  Add needed #includes due to the split up in IOP_IOR.pidl

Sun Dec  7 18:32:47 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* examples/Kokyu_dsrt_schedulers/FP_Scheduler.cpp:
	* examples/Kokyu_dsrt_schedulers/MIF_Scheduler.cpp:
	* examples/Kokyu_dsrt_schedulers/MUF_Scheduler.cpp:

	  Fixed a compile error due to the changes in IOP_IOR.pidl.

Sun Dec  7 12:26:43 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/RTCosScheduling/RTCosScheduling_ClientScheduler_i.cpp:
	  
	  Fixed a compile error due to the changes in IOP_IOR.pidl.

Sun Dec  7 17:59:12 UTC 2003  Johnny Willemsen  <jwillemsen@remedy.nl>

	* examples/AMH/Sink_Server/mt_server.dsp:
	* examples/Buffered_AMI/client.dsp:
	* examples/Buffered_AMI/server.dsp:
	* examples/Buffered_Oneways/client.dsp:
	* examples/Buffered_Oneways/server.dsp:
	* examples/Callback_Quoter/Consumer.dsp:
	* examples/Callback_Quoter/Notifier.dsp:
	* examples/Callback_Quoter/Supplier.dsp:
	* examples/Content_Server/AMI_Iterator/client.dsp:
	* examples/Content_Server/AMI_Iterator/server.dsp:
	* examples/Content_Server/AMI_Observer/client.dsp:
	* examples/Content_Server/AMI_Observer/server.dsp:
	* examples/Content_Server/SMI_Iterator/client.dsp:
	* examples/Content_Server/SMI_Iterator/server.dsp:
	* examples/Event_Comm/Consumer.dsp:
	* examples/Event_Comm/Notifier.dsp:
	* examples/Event_Comm/Supplier.dsp:
	* examples/Load_Balancing/client.dsp:
	* examples/Load_Balancing/server.dsp:
	* examples/Load_Balancing/service.dsp: