@@ -1,3 +1,11 @@
+Sun Dec  7 22:34:42 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
+
+	* tao/Messaging/Asynch_Reply_Dispatcher.cpp:
+
+	  Fix for a race condition that I dreamt up, but could
+	  happen. This is just a continuation to "Sat Dec  6 23:42:13 2003
+	  Balachandran Natarajan  <bala@dre.vanderbilt.edu>". 
+
 Sun Dec  7 20:36:49 2003  Balachandran Natarajan  <bala@dre.vanderbilt.edu>
 
 	* tests/CodeSets/libs/UCS4_UTF16/WUCS4_UTF16.h:
